<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/group_set_topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/topbar" >

        <Button
            android:id="@+id/group_set_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:text="@string/back" />

        <TextView
            android:id="@+id/group_set_title_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="6dip"
            android:text="@string/contact_grouping"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/group_set_create_group"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="createNewGroup"
            android:background="@drawable/bar_button_bg"
            android:src="@drawable/add" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/group_set_name_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_set_topbar"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/grouping_for"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/group_set_contact_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="Star"
            android:textSize="20dip"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/group_set_no_group_info_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_set_name_bar"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30dip"
        android:singleLine="false"
        android:text="@string/no_groups_now"
        android:textSize="20dip"
        android:visibility="gone" />

    <ListView
        android:id="@+id/group_set_grouplist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_set_name_bar"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dip" >
    </ListView>

</RelativeLayout>